# Shortcourse

./: LICENSE  environment.yaml  pyproject.toml  readme.md
Shortcourse/: __init__.py  core_subdivision.py  exceptions.py  maths_subdivision.py  plots.py
Shortcourse/resources/: pearson_values.csv
exam/: exam_data_2023.xlsx  hypothesis1.py  hypothesis2.py  hypothesis3.py  paths.py
