[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "Shortcourse"
authors = [{name = "Valeriy Proklov", email = "valeriyproklov501@gmail.com"}]
readme = "readme.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]


[project.urls]
Home = "https://github.com/Val4evr/stats-shortcourse"
